--- a/src/common/css/module/_common.scss
+++ b/src/common/css/module/_common.scss
@@ -1,3 +1,6 @@
+@use 'variables';
+@use 'mixin';
+
 //=====================================
 // 全てのページに共通する項目
 //=====================================
@@ -7,6 +10,7 @@
 *:before,
 *:after {
   box-sizing: inherit;
+  cursor: inherit;
 }
 
 html {
@@ -19,7 +23,7 @@ html {
 
 body{
   font-size: 1.6rem;
-  color: $main-txt__color;
+  color: variables.$main-txt__color;
   line-height: 1.3;
 }
 
@@ -30,7 +34,7 @@ body{
 
 //SP表示では縦に並びます
 .column__sp {
-  @include sp {
+  @include mixin.sp {
     flex-direction: column;
   }
 }
@@ -46,26 +50,26 @@ body{
 //SP版のみ改行
 .br__sp {
   display: none;
-  @include sp {
+  @include mixin.sp {
     display: block;
   }
 }
 
 //PC版のみ改行
 .br_pc {
-  @include sp {
+  @include mixin.sp {
     display: none;
   }
 }
 
 .sp_only {
-  @include pc {
+  @include mixin.pc {
     display: none;
   }
 }
 
 .pc_only {
-  @include sp {
+  @include mixin.sp {
     display: none;
   }
 }
@@ -76,7 +80,7 @@ body{
   min-width: 1080px;
   padding: 0 30px;
   margin: 90px auto 0;
-  @include sp {
+  @include mixin.sp {
     min-width: 100%;
     padding: 0 15px;
     margin-top: 60px;
