--- a/src/common/css/module/_variables.scss
+++ b/src/common/css/module/_variables.scss
@@ -6,4 +6,7 @@ $accent-txt__color: #fff;
 $movie_bg__color: #000;
 $bg__color: #fff;
 $reserve-btn__color: #b69f7e;
-$instagram-btn__color: #66615a;
+$instagram-btn__color: #7E776F;
+$instagram-bland__color: #e1306c;
+$line-bland__color: #00c300;
+$thin-border__color: #ccc;
