--- a/src/common/css/module/_variables.scss
+++ b/src/common/css/module/_variables.scss
@@ -10,3 +10,4 @@ $instagram-btn__color: #7E776F;
 $instagram-bland__color: #e1306c;
 $line-bland__color: #00c300;
 $thin-border__color: #ccc;
+$burger-menu_opened-bg__color: rgba(0, 0, 0, 0.4);
