--- a/src/css/top.scss
+++ b/src/css/top.scss
@@ -39,6 +39,23 @@
   }
 }
 
+// ドロップダウン展開時の背景デザイン用要素
+.bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: variables.$burger-menu_opened-bg__color;
+  transition: all 0.35s ease;
+  visibility: hidden;
+  z-index: 5;
+
+  &.active {
+    visibility: visible;
+  }
+}
+
 //メインコンテンツ
 .main {
   overflow: hidden;
@@ -49,9 +66,6 @@
     width: 96.87%;
     height: calc(100vh - 60px);
     margin: 0 auto;
-    @include mixin.sp {
-      height: calc(100vh - 100px);
-    }
 
     .mv_inner {
       .main-logo {
