--- a/src/common/css/module/_common.scss
+++ b/src/common/css/module/_common.scss
@@ -27,6 +27,10 @@ body{
   line-height: 1.3;
 }
 
+.link {
+  cursor: pointer;
+}
+
 //横並び左揃えにします
 .flex_wrapper {
   display: flex;
@@ -87,48 +91,20 @@ body{
   }
 }
 
-//ドロップダウンを示す下矢印のデザイン
-.icon_bottomArrow_gray {
-  position: relative;
-  padding-right: 18px;
+// ドロップダウン展開時の背景デザイン用要素
+.dark-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: variables.$burger-menu_opened-bg__color;
+  transition: all 0.35s ease;
+  visibility: hidden;
+  z-index: 5;
 
-  &::after {
-    content: '';
-    display: block;
-    width: 11px;
-    height: 6px;
-    position: absolute;
-    top: 10px;
-    right: 0;
-    background: center / contain no-repeat url(/common/img/icon_bottomArrow_gray.png);
-  }
-}
-
-//SP版ヘッダーリンクの右方向矢印のデザイン
-.icon_rightArrow {
-  position: relative;
-
-  &::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 5px;
-    height: 9px;
-    background: url(/common/img/icon_rightArrow_pink.png) center/contain no-repeat;
-  }
-}
-
-//SP版ヘッダーリンクの下方向矢印のデザイン
-.icon_bottomArrow {
-  position: relative;
-
-  &::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 15px;
-    height: 8px;
-    background: url(/common/img/icon_bottomArrow_pink.png) center/contain no-repeat;
+  &.active {
+    visibility: visible;
   }
 }
 
