--- a/src/css/top.scss
+++ b/src/css/top.scss
@@ -19,40 +19,33 @@
 
 //背景の動画
 .video_wrapper {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: fixed;
-  margin: 0 auto;
   top: 0;
+  right: 0;
   left: 0;
   z-index: -2;
   background-color: #000;
   pointer-events: none;
 
-  .bg-video {
-    height: 130%;
-    margin: 0 auto;
-    display: block;
+  .video_container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     overflow: hidden;
-    pointer-events: none;
-    border: none;
-  }
-}
 
-// ドロップダウン展開時の背景デザイン用要素
-.bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: variables.$burger-menu_opened-bg__color;
-  transition: all 0.35s ease;
-  visibility: hidden;
-  z-index: 5;
-
-  &.active {
-    visibility: visible;
+    .bg-video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      object-fit: cover;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
