--- a/src/common/css/module/_reset.scss
+++ b/src/common/css/module/_reset.scss
@@ -25,10 +25,7 @@ time, mark, audio, video {
 }
 
 table{
-	border-spacing: 0px !important;
-}
-h1,h2,h3,h4,h5,h6{
-    font-size:100%;font-weight:normal;
+	border-spacing: 0px;
 }
 a{
     text-decoration:none;
