--- a/src/reservation/css/reserve.scss
+++ b/src/reservation/css/reserve.scss
@@ -39,9 +39,12 @@
   }
 }
 
-.main {
-  .mod__h1-ttl {
-    margin-top: 80px;
-    font-size: 3rem;
+.reserve-info {
+  font-weight: bold;
+}
+
+.menu-link {
+  .mod__txt-link {
+    margin-top: 10px;
   }
 }
