--- a/src/common/css/module/_footer.scss
+++ b/src/common/css/module/_footer.scss
@@ -1,6 +1,63 @@
+@use 'variables';
+@use 'mixin';
+
 //=====================================
 // フッターのスタイル
 //=====================================
 .footer {
-  display: none;
+  background: variables.$instagram-btn__color;
+  color: variables.$accent-txt__color;
+  padding: 20px 0;
+  margin-top: 40px;
+
+  .sns-icon_list {
+    justify-content: center;
+
+    .sns-icon_list-item {
+      &:last-child {
+        margin-left: 12px;
+      }
+
+      .link {
+        .img_wrapper {
+          width: 50px;
+          height: 50px;
+          &.instagram {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+              display: block;
+              width: 35px;
+              height: 35px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .copy-right {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 1.2rem;
+  }
+  
+  .page-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    background: variables.$instagram-btn__color;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+
+    .img_wrapper {
+      width: 35px;
+    }
+  }
 }
