--- a/src/common/css/module/_keyframe.scss
+++ b/src/common/css/module/_keyframe.scss
@@ -1,4 +1,16 @@
-
-
+// ==============================
+// キーフレームの定義
+// ==============================
+@keyframes scroll_down {
+  0% {
+    bottom: 55px;
+  }
+  50% {
+    bottom: 50px
+  }
+  100% {
+    bottom: 55px;
+  }
+}
 
 
