--- a/src/css/top.scss
+++ b/src/css/top.scss
@@ -78,6 +78,41 @@
   }
 }
 
+.mv-swiper {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: -2;
+  pointer-events: none;
+
+  .swiper-slide {
+    height: 100vh;
+
+    &:nth-child(1) {
+      background: url(/img/mv_slide01.jpg) center/cover no-repeat;
+    }
+
+    &:nth-child(2) {
+      background: url(/img/mv_slide02.jpg) center/cover no-repeat;
+    }
+
+    &:nth-child(3) {
+      background: url(/img/mv_slide03.jpg) center/cover no-repeat;
+    }
+
+    &:nth-child(4) {
+      background: url(/img/mv_slide04.jpg) center/cover no-repeat;
+    }
+
+    &:nth-child(5) {
+      background: url(/img/mv_slide05.jpg) center/cover no-repeat;
+    }
+  }
+}
+
 //メインコンテンツ
 .main {
   overflow: hidden;
