--- a/src/css/top.scss
+++ b/src/css/top.scss
@@ -287,65 +287,27 @@
             justify-content: center;
             margin-top: 15px;
 
-            // 左向きナビボタン
-            .swiper-button-prev {
-              position: static;
-              height: 100%;
-              margin-top: 0;
-              width: 40px;
-
-              &::after {
-                content: '';
-                background: url(/common/img/arrowButton.png) center/contain no-repeat;
-                display: block;
-                width: 38px;
-                height: 38px;
-              }
-            }
-            // 左向きナビボタンはここまで
-
             // ページネーション
             .swiper-pagination {
               position: static;
               height: 100%;
-              width: auto;
+              width: 100%;
               margin: 0 30px;
               display: flex;
               align-items: center;
+              @include mixin.sp {
+                width: 80%;
+              }
 
               .swiper-pagination-bullet {
-                width: 10px;
-                height: 10px;
+                width: calc(100% / 6);
+                border-radius: 0;
+                height: 2px;
                 background: variables.$reserve-btn__color;
-                &:not(:first-child) {
-                  margin: 0 0 0 14px;
-                }
-
-                &.swiper-pagination-bullet-active {
-                  width: 14px;
-                  height: 14px;
-                }
+                margin: 0;
               }
             }
             // ページネーションはここまで
-
-            // 右向きナビボタン
-            .swiper-button-next {
-              position: static;
-              height: 100%;
-              margin-top: 0;
-              width: 40px;
-
-              &::after {
-                content: '';
-                background: url(/common/img/arrowButton.png) center/contain no-repeat;
-                display: block;
-                width: 38px;
-                height: 38px;
-                transform: rotate(180deg);
-              }
-            }
-            // 右向きナビボタンはここまで
           }
           // swiperはここまで
 
