--- a/src/common/css/module/_common.scss
+++ b/src/common/css/module/_common.scss
@@ -27,6 +27,7 @@ body {
   font-size: 1.6rem;
   color: variables.$main-txt__color;
   line-height: 1.5;
+  background-color: variables.$bg__color;
 }
 
 .link {
